--- a/_i18n/en/_posts/2021-01-22-通往未來的每一步.md
+++ b/_i18n/en/_posts/2021-01-22-通往未來的每一步.md
@@ -1,33 +1,32 @@
 ---
   layout: "post"
-  title: "Every step to the future"
-  excerpt: "In my opinion, \"mutual trust\" will be the key to allowing Taiwan to maintain a normal life."
+  title: "The Path to the Future"
+  excerpt: "In my opinion, “trust” is the key to maintaining a normal life in Taiwan."
   image: "/assets/imgs/447b953ea7d7b2f775804a75463a772814ab0f85.jpg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+On the last day of 2020, Taiwan braced itself for the coldest New Year's Eve ever in 16 years. Many people rang in the new year against the cold wind and apparent temperature near zero degrees Celsius.
 
-On the last day of 2020, Taiwan will usher in the coldest New Year’s Eve in 16 years. With a body temperature of nearly zero, many people are welcoming 2021 with a cold wind. 
+For the rest of the world, people have endured the ordeal of the COVID-19 pandemic for a whole year. "Lockdown" has become word of the Year 2020. As of January 15, 2021, the number of confirmed cases worldwide surpassed 90 million. 
 
-For the whole world, the cold winter caused by the new crown virus lasted for a whole year, and "#Lockdown" became the recognized representative word of 2020. As of January 15, 2021, the number of confirmed cases worldwide has exceeded 90 million. 
+Now in 2021, the world is still in turmoil, and we are even faced with the challenge of virus mutations. After 253 days of zero local cases, Taiwan is also facing a new wave of the epidemic. In this long winter night with no end in sight, in addition to the government's implementation of epidemic prevention measures and the community's concerted efforts to prevent the epidemic, in my opinion, "trust" is the key to maintaining a normal life in Taiwan.
 
-Now in 2021, there are still turmoil all over the world, and the speed of virus mutation is even harder to predict. After experiencing 253 days of zero local cases, Taiwan is also facing the challenge of a new wave of viruses. In the long winter night before the end, apart from the government's implementation of epidemic prevention measures and the concerted efforts of all people to prevent the epidemic, in my opinion, "mutual trust" will be the key to allowing Taiwan to maintain a normal life. 
+As is widely known, when Taiwan started a mask rationing plan last year, the National Health Insurance Administration of the Ministry of Health and Welfare collaborated with the g0v community to develop an open data application within 72 hours, allowing those in need to find pharmacy locations and mask stocks through a variety of channels, including visualized maps, chat bots, and voice assistants.
 
-As everyone knows, when Taiwan implemented a quota purchase system for masks last year, the Health and Welfare Department of the Ministry of Health, Welfare and Welfare collaborated with friends in the g0v community to develop a corresponding open data application through visual maps and chat robots. , Voice assistants and other multiple channels, successfully let friends in need find out where to buy and supply and demand. 
+This is not a special case rising out of the epidemic. In fact, it has been very common for Taiwan's public service to incorporate opinions from the public into policies and to collaborate with civil society.
 
-This is not a special way of cooperation born because of the epidemic. Incorporating people's opinions into policies and cooperating with non-governmental communities is already the daily routine of Taiwan's official culture. 
+For example, since Taiwan proposed to deliver its own [Open Government National Action Plan](https://www.ndc.gov.tw/Content_List.aspx?state=F5D336F102ACBC68&n=0C5AB1D0FA5B64B8&upn=97AD5AA9359CAB38) during the Open Government Partnership (OGP) Summit in June 2019, the National Development Council (NDC) and relevant agencies have worked together in a people-public-private partnership to solicit public opinions and invite stakeholders to participate in meetings through a platform called "Join". A total of 19 commitments on 5 topics including "promoting open data and freedom of information," "expanding dialogues on gender and ethnic inclusion," "government integrity" and "anti-money laundering," have been proposed. All proposals will proceed into critical implementation and evaluation stage in 2021.
 
-For example, in June 2019, Taiwan proposed an independent research and development [Open Government National Action Plan] at the OGP Summit (https://www.ndc.gov.tw/Content_List.aspx?n=0C5AB1D0FA5B64B8) After that, for nearly one and a half years, the National Development Council and various relevant ministries will use the Join platform to solicit opinions from the public and invite stakeholders to participate in the meeting. They propose to include "promoting the openness of information and information", There are a total of 19 proposals for commitments in the five major areas of "Expanding Public Participation Mechanisms", "Increasing Gender and Ethnic Inclusive Dialogues", "Implementing Clean Governance" and "Implementing Money Laundering Prevention Systems. Starting in 2021, these contents will enter an important implementation and evaluation stage. 
+Open government is a task that takes time. That is why Public Digital Innovation Space, or PDIS, the policy lab in Taiwan’s cabinet, launched the Rescue Action by Youth (RAY) project, which brings together 30 young students each year to review and revamp the government's digital services. The fourth RAY (RAY 4.0) was held last summer in conjunction with the National Development Council's User Center Design (UCD) workshop, in collaboration with seven government agencies aspiring to improve their website services.
 
-Opening up the government is a long-term accumulation of work that requires dripping water and rocks. Therefore, the Rescue Action by Youth (RAY) government website project initiated by our office, gathers 30 young students to review and reform the government's digital services. The fourth session (RAY 4.0) was combined with the National Development Conference "UCD Workshop" in the summer of last year and collaborated with seven government agencies that wish to improve their website services. 
+Through this project, students are able to gain a deeper understanding of the challenges faced by government agencies and help create a digital service that caters for good user experience and meets the needs of the government agencies. Government agencies are also able to better understand how to draft digital service plans from citizens' perspective. Several agencies, including the Youth Affairs Department of the Ministry of Education, will invite students to join in the actual revamping of their websites this year based on the results of the students' proposals. 
 
-Through this project, students can have an in-depth understanding of the challenges faced by government agencies, and provide a digital service that meets the user experience and agency needs. The agency colleagues can also better understand how to plan digital services from the user's perspective . Several agencies, including the Youth Department of the Ministry of Education, will invite students to join the ranks of the actual website based on the results of the students' projects. 
+We can see from the above examples that, in addition to internal revitalization and experimentation within the government, creativity and contribution from the civil society is of paramount importance. We are also committed to creating connections to enable the social sector to widely share the fruits of social innovation, and to further work with those who are like-minded to build a vision for the future. For example, the [Asia Pacific Social Innovation Summit](https://apsis.tw/?lang=en) (APSIS), an annual social innovation event, was fully digitalized for the first time in 2020 under the influence of the pandemic. In addition to live-streaming all keynote speeches, the traditional social innovation marketplace was also virtualized to allow anyone to experience and learn about different social innovation organizations through 2D games.
 
-From the previous examples, we can see that in addition to the activation and experimentation within government departments, the creativity and contribution of civil society are even more important. We are also committed to creating connections, so that friends in the social sector can spread the achievements of social innovations, and then work with friends who are aspiring to build a vision for the future. Take the annual social innovation event-the Asia-Pacific Social Innovation Summit as an example. Under the influence of the epidemic, full digitization will be attempted for the first time in 2020. In addition to watching forum speeches through online live broadcast, it also uses 2D games to integrate traditional The social innovation market is virtualized, and anyone can learn about different social innovation organizations through gaming experience. 
+The innovative approach of the 2020 APSIS is not only a manifestation of the infinite possibilities of digital curation, but also a milestone for the social innovation sector. Based on the experience, the 2021 APSIS will be a hybrid event combining physical and online activities, with "Invest in Asia" as the main theme, aiming to further create a new Asia Pacific social innovation platform.
 
-The innovative approach of the 2020 Asia-Pacific Social Innovation Summit not only allows us to see the infinite possibilities of digital curation, but also becomes an important milestone in the social innovation world. On this basis, the 2021 summit will combine the physical and Online, with "[investment in Asia](https://apsis.tw/)" as the main axis, a new Asia-Pacific social innovation platform was created. 
-
-In the new year, the earth is still facing many tests, whether it is the ecological engineering within the government or the ecological construction of the social sector, every attempt is a valuable experience. Therefore, in the coming year, I will introduce Taiwan’s achievements in opening up the government, social innovation and youth affairs on the World English website. This is because the Taiwan experience has shown me the most important enlightenment in the world: as long as we are not afraid of making mistakes and have the courage to create different experiences together, every step we take will become a part of the future. 
+The world still faces many challenges ahead in the new year. Every attempt is a valuable experience, whether it is an ecological project within the government or an ecosystem construction in the social sector. Starting from this year, I will introduce Taiwan's achievements in open government, social innovation and youth affairs in this column, for I believe the most important lesson that the Taiwan experience brings to the world is that, as long as we are not afraid to make mistakes and are brave enough to create different experiences together, every step we take will be part of the path leading to the future.
