--- a/_posts/2021-01-25會議設計再創新，一場有溫度的法規草案說明會.md
+++ b/_posts/2021-01-25會議設計再創新，一場有溫度的法規草案說明會.md
@@ -2,7 +2,7 @@
 layout: post
 title: 會議設計再創新，一場有溫度的法規草案說明會
 excerpt: 為民眾檢舉交通違規制度開創新局，不落入互貼「魔人」標籤的戰場
-image: https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/2/22aa9525a3a5534923736218f0043d8e0c594629_2_1380x654.jpeg
+image: /assets/imgs/22aa9525a3a5534923736218f0043d8e0c594629_2_1380x654.jpeg
 author: 詹壹雯
 category: blog
 tags:
@@ -17,7 +17,7 @@ tags:
 聽到「檢舉魔人」或「違規魔人」這樣的標籤，大家或許並不陌生。民眾檢舉交通案件這個議題，近年來在網路或報章媒體中被熱烈討論，檢舉人和被檢舉人所累積的種種情緒持續發酵。不只是交通部以及警政署，因應輿情著手檢視修正法條。網友郭先生在公共政策網路參與平台提案「廢除民眾可檢舉交通違規」，也在短短17天內獲得8,637位網友連署響應。這就是剛完成的第85次協作會議，《道路交通管理處罰條例》第七條之一「民眾檢舉交通違規」制度的討論。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/0221d3d01b2c0b4c6a35e0413080dccec1bafd58.png">
+  <img src="/assets/imgs/0221d3d01b2c0b4c6a35e0413080dccec1bafd58.png">
   <figcaption>圖一：當天線上觀看會議的網友在線上留言工具slido上也熱烈討論對話</figcaption>
 </figure>
 
@@ -26,7 +26,7 @@ tags:
 民眾提案與修法研議同步發生，揭開了這次會議的序幕。隨著時間演進，PDIS推廣的開放政府協作會議不限於特定形式（[請參考協作會議教學指南p.30-p.42](https://issuu.com/home/published/____v5_904c19b7ab178a)），PDIS主持團隊常以「全配」或「輕量」通稱。我們嘗試「因案制宜」針對不同形式和主題的會議，發展出不同的討論方法。PDIS協助行政機關辦理法規預告類的說明會並非第一次；不一樣的是，這一回我們在短短2.5小時的修正草案說明會中，設計加入「小組討論」的議程。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/02b132b85eefef817c82c38c643a3ccd86b75ab2.png">
+  <img src="/assets/imgs/02b132b85eefef817c82c38c643a3ccd86b75ab2.png">
   <figcaption>圖二：小組交流的設計，希望讓各方利害關係人透過近距離交流彼此的經驗和想法，而有進一步相互理解的機會</figcaption>
 </figure>
 
@@ -40,7 +40,7 @@ tags:
 但是，法規說明會最難解的，在於生硬的法條與民眾生活經驗之間的落差。每當主管機關詢問參與者對於法條的修正建議，或針對條文進行字斟句酌的細部討論時，現場常常是一片靜默或各式各樣文不對題的回應。畢竟，精煉的法條實在和民眾的個人經驗、日常語言相距甚遠。這場會議，我們秉持著政策討論要以「使用者需求」為核心的精神，引導民眾在「如何在減輕員警行政負擔的前提下，有效運用行政資源和民眾協作精神，改善交通檢舉制度？」這個核心問題內暢所欲言，不必受限於法條。另外，也首次安排「小組討論」的環節，讓不同立場和角色的參與者，可以更近距離、有效地和組員像「聊天」般抒發自己的經歷；即使是第一線執勤的員警，也可直接說出自己的觀察和建議，不必被迫咬文嚼字。同時，再由各組桌長將組員的意見綜整歸納後，連結至法條的精神概念；至於法律的專業，就交由主管機關交通部和執行機關警政署去研議傷神了。
 
 <figure>
-  <img src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/3/31c187c2fa1354688d663ac47f9c0acaef6dcff7_2_1332x1000.jpeg">
+  <img src="/assets/imgs/31c187c2fa1354688d663ac47f9c0acaef6dcff7_2_1332x1000.jpeg">
   <figcaption>圖三：3個小組依照核心問題「如何在減輕員警行政負擔的前提下，有效運用行政資源及民眾協作精神，改善交通檢舉制度？」進行經驗交流</figcaption>
 </figure>
 
