--- a/_i18n/en/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
+++ b/_i18n/en/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
@@ -17,8 +17,8 @@
 
 When you hear labels like &quot;reporting the demon&quot; or &quot;violating the demon&quot;, you may be familiar with it. The issue of public reporting of traffic cases has been heatedly discussed on the Internet or in newspapers and media in recent years, and the accumulated emotions of the informant and the accused continue to ferment. It is not only the Ministry of Transport and the Police Department, but in response to public opinion to review and amend the law. The netizen Mr. Guo made a proposal on the public policy network to participate in the platform &quot;abolishing the public to report traffic violations.&quot; In just 17 days, 8,637 netizens signed a response. This is the 85th cooperation meeting that has just been completed, the discussion on the system of &quot;Public Reporting of Traffic Violations&quot;, one of Article 7 of the &quot;Road Traffic Management Punishment Regulations&quot;. 
 
-<figure> 
-<img src="/assets/imgs/0221d3d01b2c0b4c6a35e0413080dccec1bafd58.png"height="3%"> 
+<figure style="text-align: center;">
+  <img src="/assets/imgs/0221d3d01b2c0b4c6a35e0413080dccec1bafd58.png" style="height: 500px; width: auto;" >
 <figcaption> Picture 1: Netizens who watched the meeting online that day also had a lively discussion on the online message tool slido</figcaption> 
 </figure> 
 
