--- a/_i18n/en/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
+++ b/_i18n/en/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
@@ -3,19 +3,19 @@
   title: "Innovative conference design, a briefing on draft regulations with temperature"
   excerpt: "Create a new round for the public to report traffic violations and not fall into the battlefield of mutual labeling of \"Magic\""
   image: "/assets/imgs/22aa9525a3a5534923736218f0043d8e0c594629_2_1380x654.jpeg"
-  author: "詹壹雯"
+  author: "Yi-Wen Chan"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "協作會議"
-    - "公共政策網路參與平台"
-    - "提點子"
+    - "Open Government"
+    - "Collaborative Meeting"
+    - "Join"
+    - "Petition"
 ---
 
 
 ### Have you ever been reported for traffic violations? Still can&#39;t understand the violations and have reported others? 
 
-When you hear labels like &quot;reporting the demon&quot; or &quot;violating the demon&quot;, you may be familiar with it. The issue of public reporting of traffic cases has been heatedly discussed on the Internet or in newspapers and media in recent years, and the accumulated emotions of the informant and the accused continue to ferment. It is not only the Ministry of Transport and the Police Department, but in response to public opinion to review and amend the law. The netizen Mr. Guo made a proposal on the public policy network to participate in the platform &quot;abolishing the public to report traffic violations.&quot; In just 17 days, 8,637 netizens signed a response. This is the 85th cooperation meeting that has just been completed, the discussion on the system of &quot;Public Reporting of Traffic Violations&quot;, one of Article 7 of the &quot;Road Traffic Management Punishment Regulations&quot;. 
+When you hear labels like &quot;reporting the demon&quot; or &quot;violating the demon&quot;, you may be familiar with it. The issue of public reporting of traffic cases has been heatedly discussed on the Internet or in newspapers and media in recent years, and the accumulated emotions of the informant and the accused continue to ferment. It is not only the Ministry of Transport and the Police Department, but in response to public opinion to [review and amend the law](https://issuu.com/pdis.tw/docs/______________7__1________________85_______?e=0). The netizen Mr. Guo made a proposal on the public policy network to participate in the platform &quot;abolishing the public to report traffic violations.&quot; In just 17 days, 8,637 netizens signed a response. This is [the 85th collaborative meeting](https://sayit.pdis.nat.gov.tw/2020-12-30-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC85%E6%AC%A1%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0) that has just been completed, the discussion on the system of &quot;Public Reporting of Traffic Violations&quot;, one of Article 7 of the &quot;Road Traffic Management Punishment Regulations&quot;. 
 
 <figure style="text-align: center;">
   <img src="/assets/imgs/0221d3d01b2c0b4c6a35e0413080dccec1bafd58.png" style="height: 500px; width: auto;" >
