--- a/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
+++ b/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
@@ -14,7 +14,7 @@ tags:
 
 ### 你被檢舉過交通違規嗎？或是曾檢舉別人違規？
 
-聽到「檢舉魔人」或「違規魔人」這樣的標籤，大家或許並不陌生。民眾檢舉交通案件這個議題，近年來在網路或報章媒體中被熱烈討論，檢舉人和被檢舉人所累積的種種情緒持續發酵。不只是交通部以及警政署，因應輿情著手檢視修正法條。網友郭先生在公共政策網路參與平台提案「廢除民眾可檢舉交通違規」，也在短短17天內獲得8,637位網友連署響應。這就是剛完成的第85次協作會議，《道路交通管理處罰條例》第七條之一「民眾檢舉交通違規」制度的討論。
+聽到「檢舉魔人」或「違規魔人」這樣的標籤，大家或許並不陌生。民眾檢舉交通案件這個議題，近年來在網路或報章媒體中被熱烈討論，檢舉人和被檢舉人所累積的種種情緒持續發酵。不只是交通部以及警政署，因應輿情[著手檢視修正法條](https://issuu.com/pdis.tw/docs/______________7__1________________85_______?e=0)。網友郭先生在公共政策網路參與平台提案「廢除民眾可檢舉交通違規」，也在短短17天內獲得8,637位網友連署響應。這就是剛完成的[第85次協作會議](https://sayit.pdis.nat.gov.tw/2020-12-30-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC85%E6%AC%A1%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0)，《道路交通管理處罰條例》第七條之一「民眾檢舉交通違規」制度的討論。
 
 <figure style="text-align: center;">
   <img src="/assets/imgs/0221d3d01b2c0b4c6a35e0413080dccec1bafd58.png" style="height: 500px; width: auto;" >
