--- a/_i18n/en/_posts/2021-02-24-健保卡的數位轉型.md
+++ b/_i18n/en/_posts/2021-02-24-健保卡的數位轉型.md
@@ -1,33 +1,34 @@
 ---
   layout: "post"
-  title: "The digital transformation of health insurance cards"
-  excerpt: "On these good foundations, the National Health Insurance Agency began to develop a \"virtual health insurance card\" policy."
+  title: "Open Government for Digital Health: Taiwan’s Virtual NHI Card"
+  excerpt: "In the future, people in Taiwan will have the option to use a virtual NHI Card instead of a physical one."
   image: "/assets/img/7e7e556a8ab653dce4ae2378ae3dea242ee93701.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+Several Taiwanese citizens line up patiently to buy medical masks outside of a pharmacy in Taiwan. They enter into the pharmacy in an orderly manner and hand in their National Health Insurance (NHI) Cards to the pharmacist at the counter one after another. The pharmacist then inserts the NIH Card into the card reader, verifies the identity of the cardholder, and hands out the masks. Each purchase is completed within 10 seconds.
 
-The crowd entered the pharmacy quietly and orderly. After the pharmacist inserts the health insurance card into the system, he can check the identity of the purchaser and complete the purchase procedure within ten seconds, and then hand the mask to the customer. This is a scene that can be seen everywhere in Taiwan after the implementation of the real-name mask system in 2020. In order to ensure that everyone in the epidemic has basic protection, Taiwan’s Central Epidemic Command Center, through the National Health Insurance Special Pharmacy, combined with the MediCloud medical cloud information system (MediCloud), launched the &quot;mask purchase&quot; policy, using health insurance IC cards and &quot;health insurance quick and easy&quot; The “Tong” app is certified and controlled to ensure that everyone can buy masks and maintain basic protection needs. Even though free trading is now open, real-name mask purchases are still in parallel. 
+The scene has been constantly seen around Taiwan ever since the name-based mask rationing system was implemented in February 2020, when Taiwan’s Central Epidemic Command Center (CECC) enlisted help from NHI-contracted pharmacies and the NHI MediCloud System, using NHI Cards and the “NHI Express App” for identity verification and order control to make basic protection available for every citizen. Today, even after domestic retail sales of medical masks resumed in June 2020, this system is still in operation.
 
-In addition to the real-name purchase system for masks, the health insurance system has also become the first firewall that is critical to epidemic prevention. After the outbreak of the epidemic in 2020, the Central Epidemic Command Center immediately linked the health insurance medical cloud information system to the entry database. When medical staff read the public health insurance card, they immediately learned the travel history, occupation, contact history, and group history of the other party, not only reducing First-line medical personnel can also divert the risk of exposure in time to prevent the possibility of nosocomial infection. 
+In addition to the name-based mask rationing system, the NHI system is also a critical first line of defense against the COVID-19 pandemic. After the COVID-19 outbreak in 2020, the CECC immediately connected the NHI MediCloud System to the border entry database. When medical staff accessed the NHI Cards of the public, they immediately learnt of travel histories, occupations, contact and cluster histories. This reduced contact risks for front-line medical personnel and allowed traffic to be diverted in time to prevent nosocomial infection.
 
-These achievements are derived from the informatization of the health insurance system at the beginning of its establishment. To this day, the process for hospitals to declare medical expenses has been fully automated, and the declaration materials are integrated in a centralized database and automatically reviewed . After the Central Health Insurance Administration of the Ministry of Health and Welfare, the central competent authority, issued health insurance IC cards in 2004, when people seek medical treatment, medical personnel can obtain diagnostic data by simply reading the card. The health insurance medical information cloud query system established in 2015 allows medical personnel to Immediately check the patient&#39;s past medical examination reports and medication records, reducing repeated medication and waste of medical resources. 
+These are the results of the digitalization of the NHI system following its establishment around the turn of the century. Today, the process of reporting medical expenses in hospitals has been fully automated, and the data are consolidated for automated review. Since the NHI Administration began issuing NHI Cards in 2004, medical personnel have been able to obtain diagnostic data of those seeking treatment simply by accessing the card. The establishment of the NHI MediCloud System in 2015 further allows medical staff to instantly acquire patients’ past medical examination reports and medication records to reduce duplication of medication and waste of medical resources.
 
-On these good foundations, the National Health Insurance Agency began to develop a &quot;virtual health insurance card&quot; policy. In view of the fact that the current IC card is not conducive to the provision of services by home and rural medical teams, and the insufficient level of information security, the reading and writing time is quite slow, so the next stage of health insurance cards will focus on mobile applications, while upgrading specifications and strengthening information communication It is safe. In the <b>future, people do not need to bring physical cards to see a doctor.</b> 
+Based on these strong foundations, the NHI Administration has begun to develop its “Virtual NHI Card” system. Once completed, it will be able to improve home healthcare and rural medical services, while making access to medical records faster and safer. **In the future, people in Taiwan will have the option to use a virtual NHI Card instead of a physical one.**
 
-Because of the wide coverage of health insurance card users, in 2018, the National Development Council invited the National Health Insurance Department and the Executive Yuan Public Digital Innovation Space Group to work together to hold three collaborative meetings to gather opinions from all walks of life. , To invite stakeholders including medical workers, health insurance users, and front-line health insurance agency card replacement personnel to clarify the appropriate practices and risk considerations for health insurance card virtualization. 
+As the NHI offers universal coverage, in 2018, the National Development Council invited the NHI Administration and Cabinet-level Public Digital Innovation Space (PDIS) team to jointly organize three collaborative meetings. The purpose was to gather ideas from various stakeholders including medical workers, NHI users and front-line staffers issuing NHI Cards, to identify methods and risks for NHI Card virtualization.
 
-The virtual card trial plan in 2020 is based on the consensus of the participants in the collaboration meeting: 
+The 2020 virtual card pilot project was based on the consensus derived from participants in the collaborative meetings, including:
 
-- Parallel virtuality and reality: physical health insurance cards retain the existing system and gradually develop virtual health insurance cards. 
-- Trial plan: Try the virtual card mode, and then go online after testing. 
-- Medical treatment: The health insurance card is mainly for medical use, without adding other functions such as electronic payment. 
+- Co-existence: The current system for physical NHI Cards will remain, while virtual NHI Cards will be developed gradually.
+- Field trial: A test run of the virtual card system will be conducted before deployment.
+- Focus on health: Extra functions such as electronic payment will not be included.
 
-In this project, people only need to use the &quot;Healthcare Autotoll&quot; App to verify their identity, and then they can display their virtual health insurance card on their mobile phones and use them in pilot medical institutions. There are a total of 2,633 including various Identified people participated in the situational test, and there were 1,902 people who actually used virtual health insurance cards for medical treatment. The trial field covers more than forty medical centers, clinics, pharmacies, health clinics and even home medical care cases at different levels. 
+Participants in this pilot project only needed to verify their identities before displaying their virtual NHI Cards on mobile devices to be used in participating institutions. A total of 2,633 people from various backgrounds joined in scenario testing, among which 1,902 people actually used the virtual NHI Cards for hospital visits. A wide variety of institutions participate in the pilot project, including medical centers, clinics, pharmacies, district health centers, and even individual cases of home care.
 
-The results of the questionnaire after the trial show that 83% of the people will want to apply for a virtual health insurance card for themselves in the future; more than 70% of the people believe that the privacy protection mechanism of the virtual health insurance card in the process of medical treatment is safe. The third phase of the pilot project, which started this year, will develop an offline time stamp mechanism for virtual health insurance cards, and expand the trial of home medical treatment and telecommunication diagnosis and treatment. 
+A survey conducted after the pilot program showed that 83% of the participants are willing to apply for a virtual NHI Card in the future. More than 70% believe that the privacy protection mechanism is secure. The third phase of the pilot project will begin this year, aiming to develop an offline time-stamp mechanism and to expand the Virtual NHI Card system to home care and remote diagnosis and treatment.
 
-Taiwan&#39;s health insurance system has always been regarded as one of the models of the medical insurance system. In the epidemic prevention operations last year, everyone saw the good application of the health insurance medical information cloud system. In the process of digital transformation of health insurance services, Taiwan has set a model for the world by &quot;involving citizens in policy making&quot; how to create future medical services through open government channels. 
+Taiwan’s NHI system is internationally celebrated as one of the model systems of national health insurance. During the COVID-19 pandemic management operations last year, the success of the NHI MediCloud System was clearly demonstrated. While making significant changes to the NHI system, Taiwan has shown the world that “involving citizens in policymaking” is how next-generation health services can be co-created through the path of Open Government.
