--- a/_i18n/en/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
+++ b/_i18n/en/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "Innovative conference design, a briefing on draft regulations with temperature"
-  excerpt: "Create a new round for the public to report traffic violations and not fall into the battlefield of mutual labeling of \"Magic\""
+  excerpt: "Create a new round for the public to report traffic violations and not fall into the battlefield of mutual labeling of \"warriors\"."
   image: "/assets/imgs/22aa9525a3a5534923736218f0043d8e0c594629_2_1380x654.jpeg"
   author: "Yi-Wen Chan"
   category: "blog"
