--- a/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
+++ b/_posts/2021-01-25-會議設計再創新，一場有溫度的法規草案說明會.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 會議設計再創新，一場有溫度的法規草案說明會
-excerpt: 為民眾檢舉交通違規制度開創新局，不落入互貼「魔人」標籤的戰場
+excerpt: 為民眾檢舉交通違規制度開創新局，不落入互貼「魔人」標籤的戰場。
 image: /assets/imgs/22aa9525a3a5534923736218f0043d8e0c594629_2_1380x654.jpeg
 author: 詹壹雯
 category: blog
