--- a/_i18n/en/_posts/2021-03-04-讓「檢舉達人」與「反檢舉魔人」對話.md
+++ b/_i18n/en/_posts/2021-03-04-讓「檢舉達人」與「反檢舉魔人」對話.md
@@ -1,27 +1,26 @@
 ---
   layout: "post"
-  title: "Let the \"reporter\" talk to the \"anti-reporter\""
-  excerpt: "What's wrong with people enthusiastically reporting and participating in public affairs?"
+  title: "Let the “informers” talk to the “anti-informers”"
+  excerpt: "So, what’s wrong with people reporting offenses enthusiastically and participating boldly in public affairs?"
   image: "/assets/imgs/4f02e84364b3140fdc47bcdcf641831806e3975e.jpeg"
-  author: "詹壹雯"
+  author: "Yi-Wen Chan"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+A certain online community carries the slogan, “To make reporting offenses as simple as breathing,” with the goal of helping the public report traffic violations more smoothly. On the other side of the coin, disagreements come in the form of the fan page “Against Malicious Informers,“ with the aim of exposing various forms of retaliatory reporting and stalking behavior. Public online sparring between “reporting“ and “against reporting“ has reached fever pitch in recent years. When news of amendments to laws related to public reports of traffic violations broke a few years ago, the subject once again entered into heated discussion.
 
-An online community’s slogan: "Make reporting as easy as breathing." To help people report traffic violations more smoothly; for those who disagree, there is a fan page of "Anti-bad Reporting Devil", aiming to expose Various retaliatory and follow-up reports. The confrontation between "reporting" and "counter-reporting" citizens has become fierce on the Internet in recent years. Years ago, the news about the revision of the law that the citizens reported traffic violations became hotly debated. 
- 
-According to the Ministry of Communications, the public whistleblowing system implemented in 1986 can be said to give whistleblowers the most power among all countries in the world. So, what's wrong with people enthusiastically reporting and participating in public affairs? Why do I need to modify the law? 
+According to the Ministry of Transportation and Communications, the public reporting system implemented in 1997 can be said to endow the informer with the most power out of all the countries in the world. So, what’s wrong with people reporting offenses enthusiastically and participating boldly in public affairs? Why is there a need to amend the law?
 
-With the popularization of smart devices, the number of excessive or targeted reports has increased. The original intention of supporting the police force with open public participation has gradually produced negative effects. For example, the prosecutor and the prosecuted party are attacking each other on the Internet, creating an atmosphere of confrontation; the police have to spend time checking the cases reported by the people, which causes crowding out of their duties; public opinion representatives have also received complaints from the people and have been improperly reported. high. 
- 
- Therefore, it is necessary to improve the "quality" of public participation rather than quantity, and to use public-private cooperation more effectively to prevent major traffic violations. We therefore assisted the Ministry of Transportation in organizing a meeting, inviting "whistleblowers" and "anti-whistleblower" social platforms, the public, front-line executors, and legislators to discuss "effective" methods of whistleblowing. 
+With the popularization of smart devices, instances of excessive or targeted reporting behavior have increased. The original good intentions of opening up to allow public participation in supporting police forces have gradually created negative effects. To list examples: online confrontation between the reporting and reported parties create an atmosphere of animosity, regular police duties are crowded out due to time spent on investigating public report cases, and civil servants are receiving public petitions against inappropriate reporting behavior, as calls to reexamine the system are growing louder.
 
-The public sector has always avoided bringing immature policies to the public for discussion, fearing being scolded and misunderstood. This time, in addition to making the draft public at the early stage, and in order to deepen the discussion, the interviews and opinions of all parties were also publicized, so that the people "come prepared." On the day of the meeting, the physical and online people were directly asked to ask questions. progress. 
+Therefore, it is necessary to raise the “quality” of public participation, as opposed to quantity, and utilize public and private cooperation more effectively to prevent major traffic violations. To this end, we assisted the Ministry of Transportation and Communications in holding a conference, extending invitations widely to social media platforms “Expert Informers“ and “Against Malicious Informers,” members of the public, front-line administrators, and legislators, to come together and discuss “effective” methods of reporting.
 
-In addition, the group discussion on the day specially arranged the pros and cons, people with different roles and identities together, so that everyone could hear the views or difficulties they had never thought of, and guided everyone to relax through the experienced "table leader" Chat and summarize and focus. Since the live broadcast is open to online participation, we also have dedicated people who keep a close eye on the "emotional ebb and flow" of online messages. When a netizen feels impatient because of being ignored on the spot, he must immediately respond online, and speak to netizens behind the camera as much as possible to avoid images. There is no sense of interaction when watching online videos. 
- 
-Some people in the meeting said that they were reported to stop at the yellow line in order to pick up children, or that all the residential areas were drawn red lines. This is a violation of the law and compelling violations; there are also police officers who said that the people are driving by themselves. Targeted reporting of disputes wastes administrative resources, and instead makes the public sector more afraid of opening up public participation. Through dialogue, everyone's experience expression can make the law more three-dimensional and closer to life. 
+The public sector has always avoided putting up underdeveloped policies for public discussion, with concerns that they might be disparaged or misunderstood. This time, aside from making the bill public from an early stage, the views of various parties were also made public early to deepen the discussion, so that members of the public can prepare for the discussion. During the conference itself, the floor was open to physical and online attendees to pose questions directly, signifying a huge step forward in challenging the existing culture in public affairs.
 
-The Commissioner of the Ministry of Communications, Li Zhaoxian, who is in charge of this issue, is still working on the draft non-stop. After the Legislative Yuan is mentioned, there will surely be another disturbance. But his remarks after that meeting made me more convinced of the value of promoting citizen participation: "We have absorbed the greatest'compromising solution', and we are more convinced that'there is no best solution, only a better solution."
+In addition, the discussion on that day took place in groups. Parties with opposing views and contrasting roles were deliberately placed in the same group, so that everyone can listen to views or difficulties that they have never considered before, and enter into a relaxed conversation mediated by an experienced “table leader,” who consolidates and summarizes the views. As the live broadcast discussion was open to online participation, we also had dedicated personnel monitoring the “emotional fluctuations” in the comment section closely. When an online participant feels neglected by the floor or impatient, they immediately reply online, and try to speak directly to the online participant behind the camera as much as possible, to avoid creating a “watch party” atmosphere with a lack of interaction.
+
+During the conference, some members of the public said that they were reported for merely stopping temporarily by the yellow line to drop off or pick up their child, or that residential areas were wholly demarcated by red lines, signaling an unsympathetic law that compels violations. There were also police officers who reported cases of targeted reporting behavior due to personal disputes, causing a waste of administrative resources, and making the public sector more wary of public participation instead. Through the conversation, each and every individual’s description of their experiences will help legislation to take better shape and be closer to life.
+
+The conference was helmed by Li Chao-hsien from the Ministry of Transportation and Communications, who has been working tirelessly on the bill up until today. Once it is proposed to the Legislative Yuan, another ripple of discussion is certain to be ignited. However, his closing remarks after that conference have made me more convinced of the value of promoting public participation, “After considering the greatest ‘compromising solution,’ we are more convinced that ‘there is no best solution, only a better solution.’”
