--- a/_i18n/en/_posts/2021-03-08-我們是很嚴肅看待「輕鬆交流」這件事.md
+++ b/_i18n/en/_posts/2021-03-08-我們是很嚴肅看待「輕鬆交流」這件事.md
@@ -1,46 +1,40 @@
+layout: post
+title: We take “casual exchanges” seriously.
+excerpt: Let’s start by making friends between POs.
+image: /assets/imgs/0b689daee0e205cb1955df5383f02e3d2a48d28d.jpeg
+author: En-en Hsu
+category: blog
+tags:
+- Open Government
+- Participation Officers
 ---
-  layout: "post"
-  title: "We take \"easy communication\" seriously"
-  excerpt: "This year, let's make friends first."
-  image: "/assets/imgs/0b689daee0e205cb1955df5383f02e3d2a48d28d.jpeg"
-  author: "許恩恩"
-  category: "blog"
-  tags: 
-    - "開放政府"
-    - "開放政府聯絡人"
----
 
+In the past, Participation Officers (POs) from various ministries attended the "Consensus Camp" held by PDIS every year. This year, let's start by making friends.
 
-Previously, the open government liaisons (PO) of various ministries and conferences participated in the "Consensus Camp" held by PDIS every year. This year, let's make friends first. 
+The goal of the PO Consensus Camp is always quite "ambitious": First of all, it is necessary to get POs familiar with the guiding principles of open government and the actual case studies through the consensus camp in the form of lectures. Secondly, POs should be enabled to participate in the planning operation of the system through presentations of the long-term observation feedback and reform policy of PDIS, and POs should have the opportunity to understand the context and give feedback. Lastly, the annual gathering offers a way for the POs to truly become a "PO Network" by establishing a network of mutual assistance and building friendship.
 
-The goal of the PO Consensus Camp is always quite "greedy": First, let the PO be familiar with the spiritual principles of open government and the actual case flesh and blood through the consensus camp like a class: Next, let the PO Being able to participate in the planning and operation of the system illustrates the long-term observation, feedback and reform policy of PDIS, and the PO has the opportunity to understand the context and give feedback. Finally, take advantage of the annual gathering so that the PO can truly become a "PO Network" to establish mutual assistance. Network, exchange friendship. 
+In the public service system, can building inter-personal friendship and prioritizing trust ultimately lead to inter-departmental cooperation across the chasm of bureaucratic norms under various conditions such as the organizational framework design?
 
-In the public service system, through the exchange of friendship and trust between people, can it finally promote the gap between inter-departmental cooperation and bureaucratic regulation under various conditions such as mechanism design? 
+I don’t know. It sounds difficult to put to practice and hard to verify, but we have to give it a try. Let's separate out the single variable of "building friendship" to see if this variable was ineffective in the past because we had put in too many elements.
 
-I don’t know, it sounds difficult to practice, nor easy to verify, but we have to give it a try. Separate the variable of "Communication and Friendship" to see if we have put too many elements in the past, which makes this variable useless. 
+That afternoon, we chose to host in the Social Innovation Lab, which was airy, bright, and unrestrained. It was a very different place from the usual meeting location in the Executive Yuan. Audrey Tang walked out of the office and gave a speech casually. The new POs introduced themselves. Then they started chatting.
 
- That afternoon, we chose to host the Social Innovation Experimental Center, which is airy, bright, and unrestrained. It is a very different place from the usual meeting of the Executive Yuan. Tang Feng walked out of the office, gave a speech casually, the new PO introduced herself, and then started a chat. 
+What did they chat about? There were no designated topics, no posters and post-it notes, no "discussion host/head of the table", only the "stand owners" arranged beforehand, which were played by senior and experienced POs, whose task was simply to "get everyone chatting".
 
-What to talk about? There are no designated topics, no posters and post-it notes, no "discussion on the host/table manager", only the "stand owner" placed beforehand, which is performed by a senior and experienced PO, and the task is only "to let everyone chat together." 
+Of course, we had talked to the stall owners beforehand, and got the feedback, "The new POs might be confused! Let PDIS hold a class first, so that at least they know how to ask questions."
 
-Before the event, of course, we had to talk to the stall owners, and we also got feedback, "The new PO meeting should be confused! Let PDIS take a class first, at least know how to ask questions."
+We followed the advice and held a pre-conference meeting. Only new POs were invited to "attend the class", which covered the boring framework and terminology. The rest was left to the exchange meeting, to be naturally sparked by both new and old POs.
 
- In a pre-conference meeting, only a brand-new PO is used to "class", the boring system and terms are introduced, and the rest will wait until the exchange meeting, where the old and new PO will naturally ferment. 
+On the day of the exchange meeting, the new POs stood up and introduced themselves one by one. When a colleague said, "I'm glad I was not 'requested', but 'invited' to come", there was finally laughter in the room.
 
-On the day of the exchange meeting, the new PO stood up and introduced themselves one by one. A colleague said, "I am glad I was not "requested", but "invited" to come." There was finally laughter. 
+Only when a key word in the hearts of these civil servants is brought into the open that relaxation is possible.
 
-The key words in the heart of civil servants are broken, and there is a little possibility of relaxation. 
+Whether you were assigned to serve as a PO or came to this place with varying degrees of free will, in short, as public servants, we are all alike in that legal norms and responsibilities are our foundations. We know this very well.
 
-Whether they are assigned to serve as PO or have different degrees of free will, and come to this place, in short, everyone as public servants is the same with legal norms and responsibilities. We know this very well. 
+That is why we sent an official document from the Executive Yuan to invite you, emailed the notice of the meeting, and made the sign-in form and name tags.
 
-So we sent an official document from the hospital to ask everyone to come, send an email to the meeting notice, make a sign-in form and a name tag. 
+However, when you sit in a booth, please decide for yourself what you want to talk about, what questions you want to ask, and what you want to chat. Sit down somewhere you like! Unless someone requests the table, PDIS will not interfere in your communication time.
 
-But, sit in the booth and decide for yourself what you want to talk about, what questions you want to ask, and what you want to talk about. Sit down somewhere you like! If no one orders the table, PDIS will not intervene in your communication time. 
+We will quietly set up the venue for you, maintain a basic rhythm of the program, take pictures, prepare refreshments, and finally use a strawberry cake as an inducement to entice you to stay until the end to take a group photo with us. That's all.
 
-We will set up for everyone in silence, maintain a basic rhythm of the program, take pictures, prepare refreshments, and finally use strawberry cake as an inducement, please leave it to the end to take a group photo with us, that's it. 
-
-What I want to promote here is not that Part A will meet with Part B, nor are it tasks or topics, but only "people" and "people". Although PDIS usually cooperates fully with everyone, and even makes everyone feel exhausted. At least today, we take "easy communication" seriously. 
-
-
-
-
+What I want to promote here is not a meeting between Department A and Department B, nor any task and topic, but only "people" and "people." Although PDIS usually cooperates extensively with POs, and even to the point of exhausting POs, at least for today, we take "casual exchanges" seriously.
